bdr.BDR2.scala.error
Compilation error:
BDR2:17: error: missing parameter type
  case_ =>
  ^